# cv-system

./: .gitignore  README.md  pyproject.toml
data/: master.example.yaml  master.yaml
data/raw_inputs/: README.md
docs/: project-details.md
jobs/example_startup_events_role/: communityforge_startup_events_cv.tex  job_config.yaml  job_description.md  selection.yaml
jobs/example_technical_ml_role/: exampletech_ml_engineer_cv.tex  job_config.yaml  job_description.md  selection.yaml
outputs/: communityforge_startup_events_cv.tex  exampletech_ml_engineer_cv.tex
prompts/: job_intake_system.md  job_intake_user.md.j2  job_refine_user.md.j2
schemas/: __init__.py  career_schema.py
scripts/: compile_pdf.sh  create_job_from_description.py  generate_cv.py  validate_data.py
templates/: cv_template.tex.j2
tests/: test_generate_cv.py  test_pdf_page_enforcement.py
