[project]
name = "cv-system"
version = "0.1.0"
description = "Programmatic CV generation from structured YAML career data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Jinja2>=3.1.6",
    "PyYAML>=6.0.2",
    "pydantic>=2.11.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
